--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,28 @@
 ---
-layout: page
-title: Projects
+layout: default
+title: المشاريع
 permalink: /projects/
 ---
 
-{% for p in site.data.projects %}
-    <div class="project">
-        <h4>- <a href="{{ p.uri }}" _target="blank">{{ p.title }}</a></h4>
-        <p>{{ p.desc }}</p>
-    </div>
-{% endfor %}
+<div class="container">
+        
+    {%include header.html %}
+
+    <div class="row">
+        <div class="col-xs-2">
+            {% include nav.html %}
+        </div>
+        
+        <div class="col-xs-8">
+            {% for p in site.data.projects %}
+                <div class="row">
+                    <div class="col-xs-12">    
+                        <div class="project">
+                            <h4><a href="{{ p.uri }}" target="_blank">{{ p.title }}</a></h4>
+                            <p>{{ p.desc }}</p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+         </div>
+</div>
