--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Hire Me
-permalink: /hireme
+layout: page
+title: Blog
+permalink: /blog
 ---
 
 <div class="container">
