--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: المشاريع
+title: Projects
 permalink: /projects/
 ---
 
 <div class="container">
-      
+
     <div class="row">
         <div class="col-xs-2">
             {% include nav.html %}
