--- a/projects.html
+++ b/projects.html
@@ -4,23 +4,48 @@ title: Projects
 permalink: /projects/
 ---
 
-<div class="container">
-
-    <div class="row">
-        <div class="col-xs-2">
-            {% include nav.html %}
+<div class="page-breaker">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h4 class="title"><span class="fa fa-bug"></span> Personal Projects</h4>
+            </div>
         </div>
+    </div>
+</div>
 
-        <div class="col-xs-8">
-            {% for p in site.data.projects %}
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="project">
-                            <h4><a href="{{ p.uri }}" target="_blank">{{ p.title }}</a></h4>
-                            <p>{{ p.desc }}</p>
-                        </div>
-                    </div>
+<div class="container">
+    {% for p in site.data.projects %}
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="project">
+                    <h4><a href="{{ p.uri }}" target="_blank">{{ p.title }}</a></h4>
+                    <p>{{ p.desc }}</p>
                 </div>
-            {% endfor %}
-         </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+
+<div class="page-breaker">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h4 class="title"><span class="fa fa-bug"></span> Freelance Projects</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    {% for p in site.data.freelance %}
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="project">
+                    <h4><a href="{{ p.uri }}" target="_blank">{{ p.title }}</a></h4>
+                    <p>{{ p.desc }}</p>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 </div>
